--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@
 *_summary.xml
 *_usage.xml
 *_xst.xrpt
-
+*.projectmgr
+*.xreport
 # project-wide generated files
 *.gise
 par_usage_statistics.html
@@ -50,8 +51,12 @@ webtalk.log
 webtalk_pn.xml
 
 # generated folders
-iseconfig/
+
 xlnx_auto_0_xdb/
 xst/
 _ngo/
 _xmsgs/
+
+# want the folder to be saved but not the contents
+iseconfig/
+
